<resources>

    <!--    Main strings    -->
    <string name="app_name">MobileAppAndroid</string>


    <!--    Welcome Page    -->
    <string name="welcome_slo">Your Financial Assistant.</string>

    <!--    Home Page    -->
    <string name="main_tools">Tools</string>
    <string name="main_currency_btn" translatable="false">@string/currency_converter_title</string>
    <string name="Financial_Tracking">Financial Tracking</string>
    <string name="plusadd_button">+ Add</string>
    <string name="thisMonth">(Consume of this month)</string>
    <string name="viewDetail">View Detail</string>

    <!--    Tracking    -->
    <string name="Charts">Charts</string>
    <string name="recentRecords">Recent Records</string>
    <string name="is_consume">Consume</string>
    <string name="is_revenue">Revenue</string>
    <string name="save_button">Save</string>
    <string name="add_button">Add</string>
    <string name="Amount">Amount</string>
    <string name="Category">Category</string>
    <string name="Description">Description</string>
    <string name="Currency_HKD">HKD</string>
    <string name="AddRecord">Add Record</string>
    <string name="Date">Date</string>
    <string name="m1">January</string>
    <string name="m2">February</string>
    <string name="m3">March</string>
    <string name="m4">April</string>
    <string name="m5">May</string>
    <string name="m6">June</string>
    <string name="m7">July</string>
    <string name="m8">Auguse</string>
    <string name="m9">September</string>
    <string name="m10">October</string>
    <string name="m11">November</string>
    <string name="m12">December</string>
    <string-array name="months">
        <item>@string/m1</item>
        <item>@string/m2</item>
        <item>@string/m3</item>
        <item>@string/m4</item>
        <item>@string/m5</item>
        <item>@string/m6</item>
        <item>@string/m7</item>
        <item>@string/m8</item>
        <item>@string/m9</item>
        <item>@string/m10</item>
        <item>@string/m11</item>
        <item>@string/m12</item>
    </string-array>

    <string name="fNeg1">Transport</string>
    <string name="fNeg2">Health</string>
    <string name="fNeg3">Necessities</string>
    <string name="fNeg4">Entertainment</string>
    <string name="fNeg5">Catering</string>
    <string name="fNeg6">Gift</string>
    <string name="fNeg7">Education</string>
    <string name="fNeg8">Top up</string>
    <string name="fNeg9">Household</string>
    <string name="fNeg10">Bill</string>
    <string name="fNeg11">Housing</string>
    <string name="fNeg12">Clothing</string>
    <string name="fNeg13">Membership</string>
    <string name="fNeg14">Others</string>
    <string-array name="financeNegCat">
        <item>@string/fNeg1</item>
        <item>@string/fNeg2</item>
        <item>@string/fNeg3</item>
        <item>@string/fNeg4</item>
        <item>@string/fNeg5</item>
        <item>@string/fNeg6</item>
        <item>@string/fNeg7</item>
        <item>@string/fNeg8</item>
        <item>@string/fNeg9</item>
        <item>@string/fNeg10</item>
        <item>@string/fNeg11</item>
        <item>@string/fNeg12</item>
        <item>@string/fNeg13</item>
        <item>@string/fNeg14</item>
        <item>@string/fAdd1</item>
        <item>@string/fAdd2</item>
        <item>@string/fAdd3</item>
        <item>@string/fAdd4</item>
    </string-array>
    <string name="fAdd1">Interest</string>
    <string name="fAdd2">Income</string>
    <string name="fAdd3">Gift</string>
    <string name="fAdd4">Others</string>

    <string-array name="financeAddCat">
        <item>@string/fAdd1</item>
        <item>@string/fAdd2</item>
        <item>@string/fAdd3</item>
        <item>@string/fAdd4</item>
    </string-array>

    <string name="fToday">Today</string>
    <string name="fYesterday">Yesterday</string>
    <string name="fYesYesterday">The day before yesterday</string>

    <string name="Dateq">Date:</string>
    <string name="HKDq">HKD:</string>
    <string name="view">view...</string>


    <!--    Converter    -->
    <string name="currency_converter_title">Currency Converter</string>
    <string name="currency_converter_hint">Please enter $</string>
    <string name="currency_converter_convert_button">Default currency</string>
    <string name="AC" translatable="false">AC</string>
    <string name="Back" translatable="false">DEL</string>
    <string name="add2Record">Add this to record</string>


    <!--    Setting    -->
    <string name="setting_titile">Setting</string>
    <string name="Tracking">Tracking</string>
    <string name="btn_clear_tracking">CLEAR ALL TRACKING RECORD</string>
    <string name="Language">Language</string>
    <string name="lan_1" translatable="false">English</string>
    <string name="lan_2" translatable="false">中文</string>
    <string name="lan_3" translatable="false">日本語</string>
    <string name="display_text">You Language has changed to English!</string>
    <string name="cleared">All tracking records has been cleared</string>
<string name="export">Backup Tracking Records</string>
<string name="recordsCopied">All Records Copied</string>
<string name="recordsNull">There are no records</string>
<string name="loadedRecord">Loaded Records</string>
<string name="backupDes">To back up, press &#8220;EXPORT DATA AND COPY&#8220; and paste the data to store (e.g. notepad)</string>
<string name="loadDes">To load back up, copy data from back up and press &#8220;PASTE AND LOAD&#8220;</string>
<string name="warning">Please be sure your data was not corrupted before loading</string>
<string name="clearAll">CLEAR ALL RECORDS</string>
<string name="clearConfirm">Are you sure you want to clear all records?</string>
<string name="clear">CLEAR</string>
<string name="loadTitle">LOAD RECORDS</string>
<string name="loadConfirm">Are you sure you want to load records? Overwritting old records</string>
<string name="loadNOverwrite">Load and Overwrite</string>
<string name="no">No</string>
<string name="btn_export">export data and copy</string>
<string name="btn_load">paste and LOAD</string>
    <string name="loaded">All tracking records has been loaded</string>

    <!--    Interest Calculator    -->
    <string name="interest_calculator_title">Interest Calculator</string>
    <string name="Interest">Interest</string>
    <string name="SimInterest">Simple Interest</string>
    <string name="ComInterest">Compound Interest</string>
    <string name="InterestwithStarting">Interest with Starting</string>
    <string name="interest_calculator_interest">Interest Rate(%)</string>
    <string name="interest_calculator_starting">Starting</string>
    <string name="interest_calculator_year">Year</string>
    <string name="interest_calculator_add_records_no_starting">Add interest amount to the record</string>
    <string name="interest_calculator_add_records_with_starting">Add interest amount to the record(with starting amount)</string>

    <!--    Record    -->

    <string name="Filter">Filter</string>
    <string name="byYear">By Year</string>
    <string name="byMonth">By Month</string>
    <string name="allRecord">All Records</string>
    <string name="deleteRecods">DELETE RECORDS</string>
    <string name="DELETE">DELETE</string>
    <string name="deleteQuestion">Are you sure you want to delete this record</string>
    <string name="Details">Details</string>
    <string name="Edit">Edit</string>
    <string name="Save">Save</string>

    <string name="interestCalc">Interest Calculator</string>
    <!--    Chart    -->
<string name="All_Chart">All Charts</string>
    <string name="ConsumeNRev">Consume/ Revenue</string>
    <string name="CatAll">CATEGORY/ ALL</string>
    <string name="ViewAll">ViewALL</string>
    <string name="ViewingMode">Viewing Mode: </string>
    <string name="ViewingAll">Viewing Mode: All</string>
    <string name="NoData">No data available</string>


    <!--    Record_detail    -->
    <string name="record_detail_title">Details</string>
    <string name="record_detail_amount">Amount</string>
    <string name="record_detail_description">Description</string>
    <string name="record_detail_date">Date</string>
    <string name="record_detail_save">Save</string>
    <string name="record_detail_edit">Edit</string>

    <!--    Not Sorted    -->

</resources>