<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".currency_converter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_converter_title"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/enter_amount_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/currency_converter_hint"
                android:inputType="numberDecimal"
                android:keyboardNavigationCluster="false" />

            <Spinner
                android:id="@+id/choose_currency_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/show_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/choose_currency_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_converter_convert_button" />

        <Button
            android:id="@+id/currency_page_go_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_converter_go_home" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>