<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_currency_converter"
    tools:context=".FinanceMainPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="18dp"
        android:paddingRight="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setting_screen_titile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prompt_bold"
                android:text="@string/Financial_Tracking"
                android:textColor="@color/currency_converter_white"
                android:textSize="26sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/currency_page_go_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/currency_converter_home_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_tracking_title1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/prompt"
                        android:text="@string/recentRecords"
                        android:textColor="@color/home_white"
                        android:textSize="18sp" />

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/add_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_main_add_btn"
                    android:text="@string/plusadd_button"
                    android:textColor="@color/home_white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_record"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="14dp"
                android:scrollbarThumbHorizontal="@color/record_scrollbar"
                android:scrollbarThumbVertical="@color/record_scrollbar">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/to_all_records"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_stork_button_long"
                android:clickable="true"
                android:gravity="start|center_vertical"
                android:onClick="onClick"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/viewDetail"
                    android:textAlignment="center"
                    android:textColor="@color/home_white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_tracking_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/prompt"
                        android:text="@string/Charts"
                        android:textColor="@color/home_white"
                        android:textSize="18sp" />

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/to_graph"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_stork_button_long"
                android:clickable="true"
                android:gravity="start|center_vertical"
                android:onClick="onClick"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/viewDetail"
                    android:textAlignment="center"
                    android:textColor="@color/home_white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>